--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Contact Me</h1>
-        <form action="https://formspree.io/f/xpzvvozl" method="POST">
+        <h1>Reach out to me!</h1>
+        <form id="contactForm" action="https://formspree.io/f/xpzvvozl" method="POST">
             <label for="name">Name</label>
             <input type="text" id="name" name="name" required>
 
@@ -19,7 +19,10 @@
             <label for="message">Message</label>
             <textarea id="message" name="message" rows="4" required></textarea>
 
-            <button type="submit">Submit</button>
+            <div class="buttons">
+                <button type="submit">Submit</button>
+                <button type="button" id="clearButton">Clear Form</button>
+            </div>
         </form>
     </div>
     <script src="script.js"></script>
